/*
 * Copyright 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package meta.service.journal;

service EngineService {
  rpc ListShard(ListShardRequest) returns (ListShardReply) {}

  rpc CreateShard(CreateShardRequest) returns (CreateShardReply) {}

  rpc DeleteShard(DeleteShardRequest) returns (DeleteShardReply) {}

  rpc ListSegment(ListSegmentRequest) returns (ListSegmentReply) {}

  rpc CreateNextSegment(CreateNextSegmentRequest) returns (CreateNextSegmentReply) {}

  rpc DeleteSegment(DeleteSegmentRequest) returns (DeleteSegmentReply) {}

  rpc SealUpSegment(SealUpSegmentRequest) returns (SealUpSegmentReply) {}

  rpc ListSegmentMeta(ListSegmentMetaRequest) returns (ListSegmentMetaReply) {}

  rpc UpdateStartTimeBySegmentMeta(UpdateStartTimeBySegmentMetaRequest) returns (UpdateStartTimeBySegmentMetaReply) {}
}

message ListShardRequest {
  string shard_name = 3;
}

message ListShardReply {
  repeated bytes shards = 1;
}

message CreateShardRequest {
  string shard_name = 3;
  bytes shard_config = 4;
}

message CreateShardReply {
  uint32 segment_no = 1;
  repeated uint64 replica = 2;
}

message DeleteShardRequest {
  string shard_name = 3;
}

message DeleteShardReply {}

message ListSegmentRequest {
  string shard_name = 3;
  int32 segment = 4;
}

message ListSegmentReply {
  repeated bytes segments = 1;
}

message CreateNextSegmentRequest {
  string shard_name = 1;
  int32  current_segment = 2;
  int64  current_segment_end_offset = 3;
}

message CreateNextSegmentReply {}

message DeleteSegmentRequest {
  repeated  DeleteSegmentRaw segment_list = 1;
}

message DeleteSegmentRaw {
  string shard_name = 3;
  uint32 segment = 4;
}

message DeleteSegmentReply {}

message SealUpSegmentRequest {
  string shard_name = 1;
  uint32 segment = 2;
  uint64 end_timestamp = 3;
}

message SealUpSegmentReply {}

message ListSegmentMetaRequest {
  string shard_name = 3;
  int32 segment = 4;
}

message ListSegmentMetaReply {
  repeated bytes segments = 1;
}

message UpdateStartTimeBySegmentMetaRequest {
  string shard_name = 1;
  uint32 segment = 2;
  uint64 start_timestamp = 3;
}

message UpdateStartTimeBySegmentMetaReply {}
